--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "@eslint/js": "^9.22.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "typescript-eslint": "^8.26.1"
   },
   "extends": [
     "eslint:recommended",
